# fear-monger-detector

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
assets/: remove_bg.py
demos/ted_talk_streamlit_demo/: Dockerfile  create_tedtalk_chunks.py  read_csv.py
docs/architecture_diagrams/: architecture_diagram.drawio  fear_mongering_demo.drawio
src/backend/fear_monger_processor/: app_backend_test_fear_monger_processor.py  app_quick_check.py  config.py  inference.py  model.py  transcript.py  utils.py
src/backend/fitbit_app/: README.md  aligner.py  config.py  fitbit_app_readme.md  fitbit_auth.py  fitbit_client.py  fitbit_heart_2025-10-02.csv  fitbit_utils.py  main.py  playback_window.py
src/backend/ted_talks_app/: README.md  __init__.py  analysis.py  app.py  charts.py  config.py  data_loader.py  models.py  streamlit_ted_talk_fear_score_feed.py  utils.py
src/data/api_sample_data/: README.md  android_health_connect.json  apple_healthkit.json  fitbit_api.json
src/data/fear_mongering_processed_data/: fear_mongering_analysis_0_threshold_0.60.csv
src/data/fitbit_processed_data/: fitbit_heart_2025-10-01.csv
src/data/merged/: merged_fear_fitbit.csv
src/data/transcripts/ted_talks/: read_csv.py
src/frontend/correlation_engine/: app.py  fitbit_tokens.json  styles.css  test.py  theme_utils.py  transcribe_youtube.py  utils.py
src/frontend/ted_talk_streamlit_app/: app.py
